# phishing-detector

./: .gitignore  README.md  main.py  pyproject.toml
data/: emails.csv
models/: metrics.json
src/: app.py
src/detector/: data_generator.py  features.py  model.py  predict.py
tests/: test_features.py  test_predict.py
