[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phishing-detector"
version = "0.1.0"
description = "A phishing email detection system using machine learning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "numpy>=1.24",
    "nltk>=3.8",
    "joblib>=1.3",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "black>=23.0",
    "flake8>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]
